修改中集的环境配置/增加ssl配置

--- a/helm/clv-stack/charts/gateway-web/templates/ingressRoute.yaml
+++ b/helm/clv-stack/charts/gateway-web/templates/ingressRoute.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "gateway-web.fullname" . }}-ingressroutebar
 spec:
   entryPoints:
+    - websecure
     - web
   routes:
   - match: Host(`{{if not .Values.global.product }}{{ .Release.Name }}.{{end}}{{  .Values.global.root_domain }}`) && PathPrefix(`/gateway/`)
