--- a/helm/clv-stack/charts/webclvpg/templates/ingressRoute.yaml
+++ b/helm/clv-stack/charts/webclvpg/templates/ingressRoute.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "webclvpg.fullname" . }}-ingressroutebar
 spec:
   entryPoints:
+    - websecure
     - web
   routes:
   - match: Host(`{{if not .Values.global.product }}{{ .Release.Name }}.{{end}}{{  .Values.global.root_domain }}`) && PathPrefix(`/clvpg`)
