--- a/helm/clv-stack/charts/webweex/templates/ingressRoute.yaml
+++ b/helm/clv-stack/charts/webweex/templates/ingressRoute.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "webweex.fullname" . }}-ingressroutebar
 spec:
   entryPoints:
+    - websecure
     - web
   routes:
   - match: Host(`{{if not .Values.global.product }}{{ .Release.Name }}.{{end}}{{  .Values.global.root_domain }}`) && (PathPrefix(`/app/html`) || PathPrefix(`/app/weex`))
