--- a/helm/clv-stack/charts/gw-midstage-web/templates/ingressRoute.yaml
+++ b/helm/clv-stack/charts/gw-midstage-web/templates/ingressRoute.yaml
@@ -12,3 +12,4 @@ spec:
     services:
     - name: {{ include "gw-midstage-web.fullname" . }}-service
       port: {{ .Values.service.port }}
+  tls: {}
