--- a/helm/clv-stack/charts/webbackend/templates/ingressRoute.yaml
+++ b/helm/clv-stack/charts/webbackend/templates/ingressRoute.yaml
@@ -14,3 +14,4 @@ spec:
       port: {{ .Values.service.port }}
     middlewares:
     - name: {{ include "webbackend.fullname" . }}-middleware
+  tls: {}
