增加ssl配置：恢复http访问

--- a/helm/clv-stack/charts/webbackend/templates/ingressRoute.yaml
+++ b/helm/clv-stack/charts/webbackend/templates/ingressRoute.yaml
@@ -6,7 +6,7 @@ spec:
   entryPoints:
     - websecure
     - web
-  routes:
+  - routes:
   - match: Host(`{{if not .Values.global.product }}{{ .Release.Name }}.{{end}}{{  .Values.global.root_domain }}`) && PathPrefix(`/webbackend/`)
     kind: Rule
     services:
@@ -14,7 +14,8 @@ spec:
       port: {{ .Values.service.port }}
     middlewares:
     - name: {{ include "webbackend.fullname" . }}-middleware
-  tls: {}
+    tls: {}
+  - routes:
   - match: Host(`{{if not .Values.global.product }}{{ .Release.Name }}.{{end}}{{  .Values.global.root_domain }}`) && PathPrefix(`/webbackend/`)
     kind: Rule
     services:
