--- a/helm/clv-stack/charts/webbackend/templates/ingressRoute.yaml
+++ b/helm/clv-stack/charts/webbackend/templates/ingressRoute.yaml
@@ -6,7 +6,7 @@ spec:
   entryPoints:
     - websecure
     - web
-  routes:
+  - routes:
   - match: Host(`{{if not .Values.global.product }}{{ .Release.Name }}.{{end}}{{  .Values.global.root_domain }}`) && PathPrefix(`/webbackend/`)
     kind: Rule
     services:
@@ -15,6 +15,7 @@ spec:
     middlewares:
     - name: {{ include "webbackend.fullname" . }}-middleware
     tls: {}
+  - routes:
   - match: Host(`{{if not .Values.global.product }}{{ .Release.Name }}.{{end}}{{  .Values.global.root_domain }}`) && PathPrefix(`/webbackend/`)
     kind: Rule
     services:
