--- a/helm/clv-stack/charts/webbackend/templates/ingressRoute.yaml
+++ b/helm/clv-stack/charts/webbackend/templates/ingressRoute.yaml
@@ -6,20 +6,19 @@ spec:
   entryPoints:
     - websecure
     - web
-  - routes:
-  - match: Host(`{{if not .Values.global.product }}{{ .Release.Name }}.{{end}}{{  .Values.global.root_domain }}`) && PathPrefix(`/webbackend/`)
-    kind: Rule
-    services:
-    - name: {{ include "webbackend.fullname" . }}-service
-      port: {{ .Values.service.port }}
-    middlewares:
-    - name: {{ include "webbackend.fullname" . }}-middleware
-    tls: {}
-  - routes:
-  - match: Host(`{{if not .Values.global.product }}{{ .Release.Name }}.{{end}}{{  .Values.global.root_domain }}`) && PathPrefix(`/webbackend/`)
-    kind: Rule
-    services:
-      - name: {{ include "webbackend.fullname" . }}-service
-        port: {{ .Values.service.port }}
-    middlewares:
-      - name: {{ include "webbackend.fullname" . }}-middleware
+  routes:
+    - match: Host(`{{if not .Values.global.product }}{{ .Release.Name }}.{{end}}{{  .Values.global.root_domain }}`) && PathPrefix(`/webbackend/`)
+      kind: Rule
+      services:
+        - name: {{ include "webbackend.fullname" . }}-service
+          port: {{ .Values.service.port }}
+      middlewares:
+        - name: {{ include "webbackend.fullname" . }}-middleware
+      tls: {}
+    - match: Host(`{{if not .Values.global.product }}{{ .Release.Name }}.{{end}}{{  .Values.global.root_domain }}`) && PathPrefix(`/webbackend/`)
+      kind: Rule
+      services:
+        - name: {{ include "webbackend.fullname" . }}-service
+          port: {{ .Values.service.port }}
+      middlewares:
+        - name: {{ include "webbackend.fullname" . }}-middleware
