--- a/k8s/kafka/kafka.yaml
+++ b/k8s/kafka/kafka.yaml
@@ -67,7 +67,7 @@ spec:
         - -c
         - "exec kafka-server-start.sh /opt/kafka/config/server.properties --override broker.id=${HOSTNAME##*-} \
           --override listeners=PLAINTEXT://:9093 \
-          --override zookeeper.connect=zookeeper.default.svc.cluster.local:2181 \
+          --override zookeeper.connect=192.168.202.46:12181 \
           --override log.dir=/var/lib/kafka \
           --override auto.create.topics.enable=true \
           --override auto.leader.rebalance.enable=true \
