--- a/helm/elastic-stack/charts/kibana/values.yaml
+++ b/helm/elastic-stack/charts/kibana/values.yaml
@@ -39,6 +39,7 @@ files:
     server.host: "0"
     ## For kibana < 6.6, use elasticsearch.url instead
     elasticsearch.hosts: http://elasticsearch:9200
+    elasticsearch.requestTimeout: 60000
 
     ## Custom config properties below
     ## Ref: https://www.elastic.co/guide/en/kibana/current/settings.html
