--- a/helm/elastic-stack/charts/kibana/values.yaml
+++ b/helm/elastic-stack/charts/kibana/values.yaml
@@ -38,7 +38,7 @@ files:
     server.name: kibana
     server.host: "0"
     ## For kibana < 6.6, use elasticsearch.url instead
-    elasticsearch.hosts: http://elasticsearch:9200
+    elasticsearch.hosts: http://elk-elasticsearch-client.default.svc.cluster.local:9200
     elasticsearch.requestTimeout: 60000
 
     ## Custom config properties below
