修改elk的地址

--- a/helm/elastic-stack/values.yaml
+++ b/helm/elastic-stack/values.yaml
@@ -7,7 +7,7 @@ elasticsearch:
 kibana:
   enabled: true
   env:
-    ELASTICSEARCH_HOSTS: http://{{ .Release.Name }}-elasticsearch-client:9200
+    ELASTICSEARCH_HOSTS: http://{{ .Release.Name }}-elasticsearch-client.default.svc.cluster.local:9200
 
 logstash:
   enabled: true
