--- a/helm/elastic-stack/charts/kibana/templates/service.yaml
+++ b/helm/elastic-stack/charts/kibana/templates/service.yaml
@@ -23,8 +23,8 @@ spec:
     - {{ $cidr }}
     {{- end }}
   {{- end }}
-  type: {{ .Values.service.type }}
-  {{- if and (eq .Values.service.type "ClusterIP") .Values.service.clusterIP }}
+#  type: {{ .Values.service.type }}
+#  {{- if and (eq .Values.service.type "ClusterIP") .Values.service.clusterIP }}
   clusterIP: {{ .Values.service.clusterIP }}
   {{- end }}
   ports:
