--- a/helm/elastic-stack/charts/kibana/templates/service.yaml
+++ b/helm/elastic-stack/charts/kibana/templates/service.yaml
@@ -24,7 +24,7 @@ spec:
     {{- end }}
   {{- end }}
 #  type: {{ .Values.service.type }}
-#  {{- if and (eq .Values.service.type "ClusterIP") .Values.service.clusterIP }}
+  {{- if and (eq .Values.service.type "ClusterIP") .Values.service.clusterIP }}
   clusterIP: {{ .Values.service.clusterIP }}
   {{- end }}
   ports:
