--- a/helm/elastic-stack/charts/elasticsearch/templates/client-svc.yaml
+++ b/helm/elastic-stack/charts/elasticsearch/templates/client-svc.yaml
@@ -18,26 +18,8 @@ spec:
   ports:
     - name: http
       port: 9200
-{{- if and .Values.client.httpNodePort (eq .Values.client.serviceType "NodePort") }}
-      nodePort: {{ .Values.client.httpNodePort }}
-{{- end }}
       targetPort: http
-{{- if .Values.client.exposeTransportPort }}
-    - name: transport
-      port: 9300
-      targetPort: transport
-{{- end }}
   selector:
-    app: {{ template "elasticsearch.name" . }}
-    component: "{{ .Values.client.name }}"
-    release: {{ .Release.Name }}
-#  type: {{ .Values.client.serviceType }}
-{{- if .Values.client.loadBalancerIP }}
-  loadBalancerIP: "{{ .Values.client.loadBalancerIP }}"
-{{- end }}
-  {{if .Values.client.loadBalancerSourceRanges}}
-  loadBalancerSourceRanges:
-    {{range $rangeList := .Values.client.loadBalancerSourceRanges}}
-    - {{ $rangeList }}
-    {{end}}
-  {{end}}
+    app: elasticsearch
+    component: "client"
+    release: elk
