--- a/helm/clv-stack/charts/carstore-biz/values.yaml
+++ b/helm/clv-stack/charts/carstore-biz/values.yaml
@@ -2,12 +2,12 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 2
 
 image:
   repository: nginx
   tag: stable
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 nameOverride: ""
 fullnameOverride: ""
