--- a/helm/clv-stack/charts/gateway-web/values.yaml
+++ b/helm/clv-stack/charts/gateway-web/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: nginx
   tag: stable
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 nameOverride: ""
 fullnameOverride: ""
